--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -9,33 +9,49 @@
   background-color: black;
   color: white;
   text-transform: uppercase;
-  font-family: Encode Sans Condensed;
+  font-family: "Encode Sans Condensed", sans-serif; // Ensure font fallbacks are included
   font-weight: bolder;
   border: none;
   cursor: pointer;
   display: flex;
   justify-content: center;
+
   &:hover {
     background-color: white;
     color: black;
     border: 1px solid black;
   }
+
   &.google-sign-in {
     background-color: #4285f4;
     color: white;
+
     &:hover {
       background-color: #357ae8;
       border: none;
     }
   }
+
   &.inverted {
     background-color: white;
     color: black;
     border: 1px solid black;
+
     &:hover {
       background-color: black;
       color: white;
       border: none;
     }
+  }
+}
+
+// Responsive adjustments for smaller screens
+@media (max-width: 768px) {
+  .button-container {
+    min-width: 120px; // Reduce minimum width to fit smaller screens
+    padding: 0 20px; // Reduce padding to conserve space
+    font-size: 14px; // Slightly reduce font size for better fit
+    line-height: 40px; // Adjust line height to match reduced height
+    height: 40px; // Reduce button height for a more compact design
   }
 }
