--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -1,30 +1,46 @@
 .cart-dropdown-container {
   position: absolute;
-  width: 240px;
-  height: 340px;
+  width: 90%; /* Adjusted width for smaller screens */
+  max-width: 300px; /* Maximum width to ensure it doesn't become too wide */
+  height: auto; /* Let height adjust based on content */
+  max-height: 80vh; /* Limit maximum height to avoid it extending beyond the viewport */
   display: flex;
   flex-direction: column;
   padding: 20px;
   border: 1px solid black;
   background-color: white;
   top: 90px;
-  right: 40px;
+  right: 10px; /* Adjusted position for smaller screens */
   z-index: 5;
 
   .cart-items {
-    height: 240px;
+    flex-grow: 1; /* Allow cart items to expand and fill available space */
     display: flex;
     flex-direction: column;
     overflow-y: auto; /* Use auto to show scrollbar only when needed */
-    scrollbar-width: none; /* For Firefox */
+    scrollbar-width: thin; /* For Firefox */
     -ms-overflow-style: none; /* For Internet Explorer and Edge */
-  }
 
-  .cart-items::-webkit-scrollbar {
-    display: none; /* For Chrome, Safari, and Opera */
+    &::-webkit-scrollbar {
+      width: 8px; /* Set width for scrollbar */
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: rgba(
+        0,
+        0,
+        0,
+        0.2
+      ); /* Customize scrollbar thumb color */
+      border-radius: 4px; /* Add border radius to scrollbar thumb */
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: transparent; /* Set scrollbar track color */
+    }
   }
 
   button {
-    margin-top: auto;
+    margin-top: 10px; /* Adjusted margin for smaller screens */
   }
 }
