--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -6,14 +6,17 @@
   padding: 15px 0;
   font-size: 20px;
   align-items: center;
+
   .image-container {
     width: 23%;
     padding-right: 15px;
+
     img {
       width: 100%;
       height: 100%;
     }
   }
+
   .name,
   .quantity,
   .price {
@@ -33,5 +36,33 @@
   .remove-button {
     padding-left: 12px;
     cursor: pointer;
+  }
+
+  @media only screen and (max-width: 768px) {
+    font-size: 16px;
+    flex-wrap: wrap;
+
+    .image-container {
+      width: 100%;
+      padding-right: 0;
+      margin-bottom: 10px;
+
+      img {
+        width: 100%;
+        height: auto;
+      }
+    }
+
+    .name,
+    .quantity,
+    .price {
+      width: 100%;
+      margin-bottom: 5px;
+    }
+
+    .remove-button {
+      width: 100%;
+      padding-left: 0;
+    }
   }
 }
