--- a/src/components/directory/directory.styles.scss
+++ b/src/components/directory/directory.styles.scss
@@ -3,4 +3,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+
+  @media only screen and (max-width: 768px) {
+    justify-content: center; // Center items on smaller screens
+  }
 }
