--- a/src/components/sign-in-form/sign-in-form.styles.scss
+++ b/src/components/sign-in-form/sign-in-form.styles.scss
@@ -12,3 +12,9 @@
     justify-content: space-between;
   }
 }
+@media (max-width: 768px) {
+  .sign-in-container {
+    width: 100%; // Use the full viewport width
+    padding: 0 20px; // Add some padding to prevent content from touching the screen edges
+  }
+}
