--- a/src/index.scss
+++ b/src/index.scss
@@ -19,3 +19,19 @@ a {
 * {
   box-sizing: border-box;
 }
+
+/* Mobile styles */
+@media (max-width: 768px) {
+  body {
+    padding: 10px 20px; /* Reduced padding */
+  }
+
+  /* You can also adjust font sizes, image sizes, and more for mobile */
+  body,
+  button,
+  input,
+  select,
+  textarea {
+    font-size: 16px; /* Increase font size for better readability on mobile */
+  }
+}
